# UVA-MissionPlanning

./: .gitignore  arm_mission_planning.html
0-资料集合/: 00-提问.md  01-指标.md  03-基础资料.md  04-专业术语.md  反辐射无人机.xmind
0-资料集合/03-流程描述/: 01-训练方案设计.md  91-台军详细部署.md
0-资料集合/03-流程描述/01-威胁评估/: GLM-反辐射无人机威胁评估1-完整.md  反辐射无人机目标威胁评估计算规则文档.md  威胁评估-详细技术方案-2优化.md  威胁评估-详细技术方案.md
0-资料集合/03-流程描述/01-情况研判/: GLM-反辐射无人机威胁评估1-完整.html  GLM-反辐射无人机威胁评估1-完整.md  威胁评估-详细技术方案.md
0-资料集合/03-流程描述/02-协同任务/: 00-协同任务规划模块.md  01-情况研判.html  03-环境参数设置.html  04-兵力需求计算.html  05-作战任务分配.html  06-工作参数规划.html
0-资料集合/03-流程描述/10-无人机UI设计/: index.html
0-资料集合/03-流程描述/11-台湾雷达部署情况/: deepseek_html_20260407_7af102.html  deepseek_html_20260407_bd7b5f.html  taiwan_radar_system.html  台湾地区雷达部署态势感知.md  台湾雷达详情.md
0-资料集合/03-流程描述/20-雷达防御/: 台湾地区军队雷达预警体系完整数据手册.md
0-资料集合/03-流程描述/50-相关知识/: 01-训练方案设计.md  JWS-01反辐射无人机-1汇总.md  JWS-01反辐射无人机-2哈比.md  JWS-01反辐射无人机-3参考流程.md  JWS-01反辐射无人机-4.md  JWS-01无人机资料.md  JWS01参数.md  台军雷达参数.md  应对反辐射无人机.md  想定设计-1.md  想定设计-3-综合.md  想定设计-4.md  雷达主要参数.md
0-资料集合/03-流程描述/51-想定集合/: 想定设计-2-联合作战.md  想定设计-6.md
0-资料集合/04-效能评估/: 01-怎么进行评估.md  10-案例1-辐射源压制效益-雷达关机覆盖率-单机.md  10-案例2-辐射源压制效益-雷达关机覆盖率-多机.md  11-辐射源压制效益2-筛选.md  11-辐射源压制效益3-案例.md  20-攻击毁伤能力1-完整.md  20-攻击毁伤能力2-筛选.md  20-攻击毁伤能力3-案例.md  31-联合作战效果影响1-完整.md  31-联合作战效果影响3-案例.md  评估总结-1-合并.md  评估总结-2-详细.md
0-资料集合/04-效能评估/1-历史记录/: 01-怎么进行评估.md  10-案例1-辐射源压制效益-雷达关机覆盖率-单机.md  10-案例2-辐射源压制效益-雷达关机覆盖率-多机.md  11-辐射源压制效益1-完整.md  20-攻击毁伤能力1-完整.md  20-攻击毁伤能力2-精简.md  20-攻击毁伤能力3-整理.md  20-攻击毁伤能力3-案例.md  20-攻击毁伤能力4-优化.md  31-联合作战效果影响1-完整.md
0-资料集合/04-效能评估/2-初步结果/: 三项评估指标介绍.pptx
0-资料集合/其他资料/: AFSim仿真架构分析.docx  协同任务管理.md
0-资料集合/参考资料/: 反辐射无人机任务规划-扩展.md  反辐射无人机任务规划.md  反辐射无人机任务规划.xmind
0-资料集合/界面设计/: 0101-试验数据采集模块.html  0102-试验数据管理.html  0103-数据转换与整合.html  0104-数据转换与整合.html  0105-统计分析-2.html  0105-统计分析.html  0106-可视化展示.html  0201-模型构建.html  0202-模型检验.html  0203-模型校准.html  0204-模型管理.html  0301-协同任务管理-2-优化版本.html  0301-协同任务管理-3-优化版本.html  0301-协同任务管理-4-优化版本.html  0301-协同任务管理-5-优化版本.html  0301-协同任务管理.html  0301-协同任务配置 .html  0302-任务场景编辑-2-优化版本-1-任务背景设置.html  0302-任务场景编辑-2-优化版本-2-任务背景设置.html  0302-任务场景编辑-2-优化版本.html  0302-任务场景编辑-3-优化版本.html  0302-任务场景编辑.html  0304-兵力需求计算.html  0305-作战任务分配.html  0306-巡航路径规划-1-协同作战编队突防.html  0306-巡航路径规划.html  0307-搜索路径规划-2-优化版本.html  0307-搜索路径规划-3-优化版本.html  0307-搜索路径规划.html  0308-工作参数规划-2.html  0308-工作参数规划.html  0309-协同任务规划.html  0401-仿真模型支持及管理.html  0402-动态仿真.html  0403-多层次仿真.html  0404-作战行动模拟.html  0405-仿真控制.html  0406-三维态势显示.html  0407-实体状态显示.html  0408-效果显示.html  (+9 more)
0-资料集合/界面设计/Qt/: 0101-试验数据采集模块.ui  0102-试验数据管理.ui  0103-数据转换与整合.ui  0104-数据转换与整合.ui  0105-统计分析-2.xml  0105-统计分析.ui  0106-可视化展示.xml  0201-模型构建.ui  0202-模型检验.ui  0203-模型校准.ui  0204-模型管理.ui  0301-协同任务管理.ui  0301-协同任务配置 .ui  0302-任务场景编辑.ui  0303-环境参数设置.ui  0304-兵力需求计算.ui  0305-作战任务分配.ui  0306-巡航路径规划.ui  0307-搜索路径规划.ui  0308-工作参数规划.ui  0309-协同任务规划.ui  0401-仿真模型支持及管理.ui  0402-动态仿真.ui  0403-多层次仿真.ui  0404-作战行动模拟.ui  0405-仿真控制.ui  0406-三维态势显示.ui  (+10 more)
0-资料集合/算法设计/: 3-区域压制.md  4-节点摧毁.md  区域压制搜索路径规划.html  区域压制节点摧毁系统.html
0-资料集合/资料整合/: 《哈比反辐射无人机技术方案》.docx  《哈比反辐射无人机深度技术、战术演进与未来战争融合方案》.docx  五代机雷达与光电系统研究.docx  光电对抗系统与RCG-105研究.docx  反辐射无人机任务规划研究.docx  反辐射无人机仿真系统协同任务规划模块需求规格说明.docx  反辐射无人机协同任务规划研究报告.docx  反辐射无人机协同任务规划研究报告.md  反辐射无人机协同仿真研究.docx  反辐射无人机协同仿真研究.html  反辐射无人机协同规划研究.docx  反辐射无人机协同规划研究.html  反辐射无人机战场应用-2.docx  反辐射无人机战场应用.docx  台湾爱国者雷达部署分析.docx  台湾雷达部署分析.docx  哈比无人机打击效果研究.html  雷达原理与参数总结报告.docx  雷达反制无人机研究.docx  雷达系统核心参数深度研究报告.docx  雷达系统核心参数深度研究报告.md  预警机雷达探测与作战效能研究报告.md
0-资料集合/需求设计/: 0101-试验数据采集模块.md  0102-试验数据管理.md  0103-数据转换与整合.md  0104-数据转换与整合.md  0105-统计分析.md  0106-可视化展示.md  0201-模型构建.md  0202-模型检验.md  0203-模型校准.md  0204-模型管理.md  0301-协同任务管理.md  0302-任务场景编辑.md  0303-环境参数设置.md  0304-兵力需求计算.md  0305-作战任务分配.md  0306-巡航路径规划.md  0307-搜索路径规划.md  0308-工作参数规划.md  0309-协同任务规划.md  0401-仿真模型支持及管理.md  0402-动态仿真.md  0403-多层次仿真.md  0404-作战行动模拟.md  0405-仿真控制.md  0406-三维态势显示.md  0407-实体状态显示.md  0408-效果显示.md  0409-态势回放.md  0501-评估指标体系管理.md  0502-评估指标管理.md  0503-指标权重设置.md  0504-评估指标数据采集.md  0505-评估计算.md  0506-评估结果展示.md  0507-评估报告生成.md
0-资料集合/需求设计-模块/: 协同任务规划模块需求规格说明.md
1-情况研判/: 1-整体界面-1.html  1-整体界面-2-弹窗界面.html  2-合并界面.html
1-情况研判/situation/: CMakeLists.txt  SituationAnalysis.cpp  SituationAnalysis.h  SituationAnalysis.pro  SituationAnalysis.py  SituationAnalysis.ui  main.cpp  resources.qrc  打开项目.bat  项目说明.md
2-协同任务/: cooperative_mission_planning.html
2-协同任务-参考/: arm_mission_planning_v2.html  index.html
2-协同任务/Project/: AddForceDialog.cpp  AddForceDialog.h  AddForceDialog.ui  CMakeLists.txt  CooperativeMissionPlan.cpp  CooperativeMissionPlan.h  CooperativeMissionPlan.ui  CooperativeMissionPlanning.pro  DatabaseManager.cpp  DatabaseManager.h  PathDisplayDialog.cpp  PathDisplayDialog.h  PathDisplayDialog.ui  Project.pro  StructData.h  TargetParamDialog.cpp  TargetParamDialog.h  TargetParamDialog.ui  TaskDialog.cpp  TaskDialog.h  TaskDialog.ui  TaskPlanManagerDialog.cpp  TaskPlanManagerDialog.h  TaskPlanManagerDialog.ui  database_schema.sql  main.cpp  resources.qrc  taskdialog.cpp  taskdialog.h  taskdialog.ui  test_header_style.cpp
2-协同任务/Project/icons/: README.md
Project/: .clang-format  CMakeLists.txt
Project/src/EstimateSituation/: AnimatedSwitch.cpp  AnimatedSwitch.h  CMakeLists.txt  EstimateSituation.cpp  EstimateSituation.h  EstimateSituation.ui  EstimateSituationStruct.h  FirepowerControl.cpp  FirepowerControl.h  FirepowerControl.ui  README.md  RZSourceRadiation.cpp  RZSourceRadiation.h  RZSourceRadiation.ui  RZThreatAssess.cpp  RZThreatAssess.h  RZThreatAssess.ui  RZThreatAssessment.cpp  RZThreatAssessment.h  RZThreatAssessment.ui  SetRadarThreatAssess.cpp  SetRadarThreatAssess.h  SetRadarThreatAssess.ui  SetThreatAssess.cpp  SetThreatAssess.h  SetThreatAssess.ui  SituationAnalysis.cpp  SituationAnalysis.h  SituationAnalysis.ui  SourceRadiation.cpp  SourceRadiation.h  SourceRadiation.ui  SpectrumAnalysis.cpp  SpectrumAnalysis.h  SpectrumAnalysis.ui  ThreatAssessment.cpp  ThreatAssessment.h  ThreatAssessment.ui  main.cpp  situationcontrol.cpp  (+2 more)
doc/: 00-协同任务规划模块.md
(+326 files in other folders)
